<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/auth_name"
        android:id="@+id/auth_label_user"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/auth_edit_user"
        android:layout_alignTop="@+id/auth_label_user"
        android:layout_toEndOf="@+id/auth_label_ip"
        android:layout_marginStart="10dp"
        android:hint="@string/auth_hint_user" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/auth_pass"
        android:id="@+id/auth_label_pass"
        android:layout_below="@+id/auth_label_user"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/auth_edit_pass"
        android:layout_alignTop="@+id/auth_label_pass"
        android:layout_toEndOf="@+id/auth_label_ip"
        android:layout_marginStart="10dp"
        android:hint="@string/auth_hint_pass"
        android:inputType="textPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/auth_ip"
        android:id="@+id/auth_label_ip"
        android:layout_below="@+id/auth_label_pass"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/auth_edit_ip"
        android:layout_alignTop="@+id/auth_label_ip"
        android:layout_toEndOf="@+id/auth_label_ip"
        android:layout_marginStart="10dp"
        android:hint="@string/auth_hint_ip" />

    <Button
        android:text="@string/auth_enviar"
        android:drawableLeft="@drawable/silverware_variant"
        android:drawablePadding="8dp"
        android:textColor="@android:color/white"
        android:backgroundTint="#ef9a9a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/auth_button_send"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/auth_edit_ip"
        android:layout_centerHorizontal="true" />

</RelativeLayout>