<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stock"
    android:background="@android:color/holo_green_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.ujaen.git.practica3.Stock">

    <TextView
        android:text="@string/titulo_stock"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:id="@+id/stock_title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/stock_title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="22dp"
        android:id="@+id/stock_name"
        android:hint="@string/stock_hint_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/stock_name"
        android:layout_alignStart="@+id/stock_name"
        android:layout_marginTop="15dp"
        android:id="@+id/stock_proveed"
        android:hint="@string/stock_hint_prove" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/stock_proveed"
        android:layout_alignEnd="@+id/stock_proveed"
        android:layout_marginTop="14dp"
        android:id="@+id/stock_vact"
        android:hint="@string/stock_hint_vact" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/stock_vact"
        android:layout_alignStart="@+id/stock_vact"
        android:layout_marginTop="13dp"
        android:id="@+id/stock_vmin"
        android:hint="@string/stock_hint_vmin" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:id="@+id/resstock" />

    <Button
        android:text="@string/stock_boton"
        android:textColor="@android:color/black"
        android:backgroundTint="#ef9a9a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:id="@+id/stock_boton"
        android:layout_below="@+id/stock_vmin"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/stock_res_estado"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stock_boton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:id="@+id/stockresestado" />
</RelativeLayout>
